Editing index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<h1>About</h1>
 						</header>
 						Hi! I'm Jesper Valdez and I'm very interested in how data may influence the future of the world, particularly when performing research, and how this might influence business. </p>
-						Since I was young, I've been fascinated by business and technology. I spent hours playing online games, buying and selling items in my games just to make money for my allowance. And as I grew older, I became interested in creating prototypes, which is how my engineering career began. </section>
+						Since I was young, I've been fascinated by business and technology. I spent hours playing online games, buying and selling items in my games just to make money for my allowance. </section>
 
 				<!-- Two -->
 					<section id="two">
